# pyo3_rust_copy_to_clipboard

./: .gitignore  Cargo.toml  README.md  main.py  pyproject.toml
.github/workflows/: release.yml
pyo3_rust/: Cargo.toml
src/: lib.rs
test_dir/: populate.py  prova.html  prova.txt
